--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -18,6 +18,6 @@ liangliangsui:
 
 pandalee99:
   name: Pan Li
-  title: Apache Fory Committer
+  title: Apache Fory PPMC Member
   url: https://github.com/pandalee99
   image_url: /img/authors/pandalee99.png
