--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,12 +1,12 @@
 chaokunyang:
   name: Shawn Yang
-  title: Apache Fory PPMC Member
+  title: Apache Fory PMC Chair
   url: https://github.com/chaokunyang
   image_url: /img/authors/chaokunyang.png
 
 wangweipeng:
   name: Weipeng Wang
-  title: Apache Fory PPMC Member
+  title: Apache Fory PMC Member
   url: https://github.com/theweipeng
   image_url: /img/authors/wangweipeng.png
 
@@ -18,6 +18,6 @@ liangliangsui:
 
 pandalee99:
   name: Pan Li
-  title: Apache Fory PPMC Member
+  title: Apache Fory PMC Member
   url: https://github.com/pandalee99
   image_url: /img/authors/pandalee99.png
