Fix specification links and add i18n fallback copy script
- Fix broken specification links: changed docs/specification/ to ../specification/
- Add prebuild script to copy specification folders to Chinese i18n
- Update package.json with copy-i18n-fallback and prebuild scripts
- Add generated i18n specification folders to .gitignore
- Revert older Chinese versions to simpler overview matching English versions

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 .docusaurus
 .cache-loader
 
+# Generated i18n specification folders (copied by prebuild script)
+i18n/zh-CN/docusaurus-plugin-content-docs/*/specification/
+
 # Misc
 .DS_Store
 .env.local
