--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,4 +56,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
           publish_branch: deploy
-          force_orphan: true
+          force_orphan: false
